--- a/style.css
+++ b/style.css
@@ -1,22 +1,24 @@
 body {
-  background-image: linear-gradient(rgba(16, 16, 54, 0.954), rgba(36, 36, 32, 0.5)),
-                  url("images/imgchicago.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-
 .circulo {
   border-radius: 300px;
 }
+
 h1 {
-  color: rgb(255, 51, 206);
+  color: rgb(241, 12, 161);
   width: 10px;
   font-size: 100px;
 }
 
-h2,h3,h4,p {
-  color: aliceblue;
+.titulo {
+margin-bottom: 0;
+}
+
+h2,h4 {
+  color: rgb(0, 0, 0);
 }
 
 .texto-izquierdo {
@@ -24,25 +26,73 @@ h2,h3,h4,p {
  position: fixed;
 }
 
+.texto-izquierdo h4{
+  color: rgb(0, 0, 0);
+  margin-top: -50px;
+}
+
+.img-fondo {
+  background-size: cover;
+  background-position: center;
+  height: 50vw;
+  width: 99vw;
+}
+.img-fondo img {
+  filter: grayscale(100%);
+}
+
+.center {
+  height: 200px;
+  display: flex;
+}
+
+.med-izq {
+  width: 200px;
+  margin: auto;
+}
+
+.med-izq img{
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
+a {
+  margin-top: 5px;
+  padding: 10px 20px;
+  text-decoration: none;
+  color:white;
+  border-radius: 5px;
+  background-color: rgb(50, 48, 48);
+}
+
+.med-der {
+  justify-content: right;
+  width: 300px;
+  margin: auto;
+  font-size: 17px;
+  color: rgb(0, 0, 0);
+}
+
+.frase h3{
+  color: rgb(0, 0, 0);
+}
+
+
+/*
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
-  .texto-izquierdo {
+  /*.texto-izquierdo {
     margin-left: 100px;
   }
 }
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
-  .texto-izquierdo {
+ /* .texto-izquierdo {
     margin-left: 50px;
   }
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
-  .texto-izquierdo {
+  /*.texto-izquierdo {
     margin-left: 10px;
   }
-}
-/*
-img{
-  filter: grayscale(100%)
 }*/
